# vei-iot-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  toolchain_dep.cmake
examples/: CMakeLists.txt
examples/include/core/: iot_code.h  iot_http.h
examples/include/log/: log_report.h
examples/include/ota/: arenal_http_download.h  iot_ota_api.h
examples/include/thing_model/: custom_topic.h  event.h  gateway.h  iot_ntp.h  iot_tm_api.h  property.h  service.h  shadow.h  webshell.h
examples/iot/: test_params.h  test_prams.c.in  test_tm_custom_topic.c  test_tm_event.c  test_tm_property.c  test_tm_property_set.c  test_tm_service.c
examples/use/: demo_temp_humid.c
libraries/: CMakeLists.txt
src/: CMakeLists.txt
src/arenal/: CMakeLists.txt
src/arenal/core/: GitSHA1.c.in  GitSHA1.h  iot_ca.h  iot_core.c  iot_core.h  iot_core_header.h  iot_http.c  iot_kv.c  iot_kv.h  iot_log.c  iot_log.h  iot_mqtt.c  iot_mqtt.h  iot_popen.c  iot_popen.h  iot_util.c  iot_util.h
src/arenal/log/: log_report.c  log_report.h  log_report_header.h
src/arenal/ota/: arenal_http_download.c  arenal_http_download.h  iot_ota_api.c  iot_ota_api.h  iot_ota_header.h  ota_utils.c  ota_utils.h
src/arenal/thing_model/: custom_topic.c  custom_topic.h  device_delay.c  device_delay.h  event.c  event.h  gateway.c  gateway.h  iot_ntp.c  iot_ntp.h  iot_tm_api.c  iot_tm_api.h  iot_tm_header.h  property.c  property.h  service.c  service.h  shadow.c  shadow.h  webshell.c  webshell.h
